welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:4: error: not found: value void
	var nb: Int = void;
                      ^